<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="book"
            type="com.rodrigotguerra.livrando.core.model.Book" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="140dp"
    android:layout_height="240dp">

<ImageView
    android:id="@+id/book_cover"
    android:layout_width="124dp"
    android:layout_height="180dp"
    android:image_url="@{book.coverUrl}"
    android:contentDescription="@string/book_cover_accessibility"
    android:scaleType="centerCrop"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="16dp"
    tools:src="@drawable/ic_book_open"/>

    <TextView
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{book.title}"
        app:layout_constraintTop_toBottomOf="@id/book_cover"
        app:layout_constraintStart_toStartOf="@id/book_cover"
        app:layout_constraintEnd_toEndOf="@id/book_cover"
        tools:text="@string/book_title" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@{book.author}"
        app:layout_constraintTop_toBottomOf="@id/book_title"
        app:layout_constraintStart_toStartOf="@id/book_cover"
        app:layout_constraintEnd_toEndOf="@id/book_cover"
        tools:text="@string/book_author" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>